--- a/app/app.global.css
+++ b/app/app.global.css
@@ -7,6 +7,8 @@
 @import "~jspsych-react/css/jspsych.css";
 @import "~rc-slider/assets/index.css";
 @import "~react-toastify/dist/ReactToastify.css";
+@import "./utils/labjs/lib/lab.css";
+
 
 body {
   position: relative;
